Resolve table checkboxes alignment & missing select box styles

--- a/scss/base/_forms.scss
+++ b/scss/base/_forms.scss
@@ -104,6 +104,13 @@
     }
   }
 
+  textarea {
+
+    &::placeholder {
+      color: $warm-grey;
+    }
+  }
+
   fieldset {
     background: none;
     margin-left: 0;
